tests/toy/neg/001130_mutation.toylang
program a = { if program a = { } . then sleep; } .
